# chicane

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Functions.cmake  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  chicane.sln  chicane.vcxproj  chicane.vcxproj.filters  core.cpp  core.h  premake5.lua  queue-family.cpp  swap-chain.cpp  vertex.cpp  vertex.h
Assets/: CMakeLists.txt
Assets/Editor/: CMakeLists.txt
Assets/Editor/Meshes/: Camera.bmsh  Flashlight.bmsh
Assets/Editor/Models/: Camera.bmdl
Assets/Editor/Skies/: Default.bsky
Assets/Editor/Views/: Home.decal  Home.grid
Assets/Engine/: CMakeLists.txt
Assets/Engine/Meshes/: Suzanne.bmsh
Assets/Engine/Skies/: Debug.bsky
Assets/Engine/Textures/: Checkered.btex
Assets/Sample/: CMakeLists.txt
Assets/Shaders/: CMakeLists.txt  level.frag  sky.vert
Content/Engine/Vulkan/: CMakeLists.txt
Contents/Runtime/: CMakeLists.txt
Editor/: CMakeLists.txt  premake5.lua
Editor/Source/: Application.cpp  Application.hpp  Main.cpp  Main.hpp  Window.cpp  Window.hpp
Engine/: Base.h  Base.hpp  CMakeLists.txt  main.cpp  premake5.lua
Engine/Content/Models/: CMakeLists.txt  air_craft.mtl
Engine/Content/Shaders/: CMakeLists.txt  sky.vert  triangle.frag  triangle.vert
Engine/Content/Textures/: CMakeLists.txt
Engine/Core/: Application.cpp  Application.h  Application.hpp  FileSystem.cpp  FileSystem.h  Log.cpp  Log.h  Log.hpp  Mounter.cpp  Mounter.h  Queue.cpp  Queue.h  QueueFamily.cpp  SwapChain.cpp  SwapChain.h  Vertex.cpp  Vertex.h  Window.cpp  Window.hpp
Engine/Core/Vulkan/: GraphicsPipeline.cpp  GraphicsPipeline.h  Queue.cpp  Queue.h  SwapChain.cpp  SwapChain.h  Vertex.cpp  Vertex.h
Engine/Renderer/: Buffer.hpp  Debug.cpp  Debug.hpp  Device.cpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Instance.hpp  Queue.cpp  Queue.hpp  Shader.hpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp
Engine/Renderer/Classes/: Buffer.hpp  GraphicsPipeline.hpp  Queue.cpp  Queue.hpp  SwapChain.cpp  SwapChain.hpp  Vertex.cpp  Vertex.hpp
Engine/Shaders/: CMakeLists.txt  triangle-fixed.frag  triangle-fixed.vert  triangle-push.vert  triangle.frag  triangle.vert
Engine/Shaders/Private/: TriangleH.vert  triangle.vert
Engine/Shaders/Public/: TriangleH.vert.spv  triangle.frag.spv  triangle.vert.spv
Engine/Source/: Base.hpp  Core.cpp  Core.hpp  Game.hpp  Renderer.cpp  Renderer.hpp
Engine/Source/Core/: Actor.cpp  Actor.hpp  Application.cpp  Application.hpp  Controller.cpp  Controller.hpp  FileSystem.cpp  FileSystem.hpp  Helper.cpp  Helper.hpp  Kerb.cpp  Kerb.hpp  Log.cpp  Log.hpp  Pak.cpp  Pak.hpp  Window.cpp  Window.hpp
Engine/Source/Editor/: Application.cpp  Application.hpp  CMakeLists.txt  Main.cpp
Engine/Source/Game/: Actor.cpp  Actor.hpp  Controller.cpp  Controller.hpp  Level.cpp  Level.hpp  Pawn.cpp  Pawn.hpp
Engine/Source/Renderer/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  Descriptor.cpp  Descriptor.hpp  Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  Model.hpp  Queue.cpp  Queue.hpp  Shader.cpp  Shader.hpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  Sync.hpp  Uniform.hpp  Vertex.cpp  Vertex.hpp
Engine/Source/Runtime/: Base.hpp  CMakeLists.txt  Renderer.hpp
Private/: CMakeLists.txt
Private/Chicane/: Renderer.cpp
Private/Chicane/Core/: FileSystem.cpp  Helper.cpp  Utils.cpp  Window.cpp
Private/Chicane/Game/: Actor.cpp  Controller.cpp  Level.cpp  State.cpp
Private/Chicane/Grid/: Essential.cpp  View.cpp
Private/Chicane/Renderer/: Camera.cpp  CommandBuffer.cpp  CubeMap.cpp  Debug.cpp  Frame.cpp  Image.cpp  Queue.cpp  SwapChain.cpp  Sync.cpp  Texture.cpp  Vertex.cpp
Private/Sample/: Apple.cpp  Apple.hpp  Camera.cpp  Camera.hpp  Main.cpp
Samples/: CMakeLists.txt
Samples/Shooter/: CMakeLists.txt
Samples/Shooter/Sources/: Application.hpp  Level.hpp
Source/Private/Chicane/: Application.cpp  CMakeLists.txt  Core.cpp  Game.cpp  Renderer.cpp  Xml.cpp
Source/Private/Sample/: Apple.cpp  Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp  Main.cpp  View.cpp  View.hpp
Sources/: .clang-format  CMakeLists.txt
Sources/Chicane/: Box.cpp  CMakeLists.txt  Grid.cpp
Sources/Chicane/Box/: CMakeLists.txt  Loader.cpp
Sources/Chicane/Core/: Async.cpp  Base64.cpp  CMakeLists.txt  Color.cpp  FileSystem.cpp  FrameTelemetry.cpp  Log.cpp  Recorder.cpp  Reference.cpp  String.cpp  Telemetry.cpp  Timer.cpp  Window.cpp  Xml.cpp
Sources/Chicane/Grid/: CMakeLists.txt  Component.cpp  Essential.cpp  Loader.cpp  Style.cpp  View.cpp
Sources/Chicane/Runtime/: Application.cpp  CMakeLists.txt  Renderer.cpp
Sources/Editor/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Editor.cpp  Editor.hpp  Layer.cpp  Layer.hpp  Main.cpp  Scene.cpp  Scene.hpp  View.cpp  View.hpp
Sources/Editor/Actor/: Character.cpp  Character.hpp  Item.cpp  Item.hpp  Sun.cpp  Sun.hpp
Sources/Editor/Content/: CMakeLists.txt
Sources/Editor/Layer/: Grid.cpp  Grid.hpp
Sources/Engine/: Box.cpp  CMakeLists.txt  Grid.cpp  Kerb.cpp  Screech.cpp
Sources/Engine/Box/: Asset.cpp  CMakeLists.txt  Font.cpp  Mesh.cpp  Model.cpp  Sky.cpp  Sound.cpp  Texture.cpp
Sources/Engine/Core/: Audio.cpp  Base64.cpp  CMakeLists.txt  Changeable.cpp  Color.cpp  FileSystem.cpp  Hash.cpp  Image.cpp  Log.cpp  Program.cpp  Recorder.cpp  Reference.cpp  Size.cpp  String.cpp  Telemetry.cpp  Time.cpp  Timer.cpp  Transformable.cpp  View.cpp  Window.cpp  Xml.cpp
Sources/Engine/Grid/: CMakeLists.txt  Component.cpp  Method.cpp  Style.cpp
Sources/Engine/Kerb/: CMakeLists.txt  Collider.cpp  Engine.cpp
Sources/Engine/Renderer/: Backend.cpp  CMakeLists.txt  Frame.cpp  Instance.cpp  Layer.cpp
Sources/Programs/: CMakeLists.txt
Sources/Runtime/: Base.hpp  CMakeLists.txt  Core.hpp  Renderer.cpp  Renderer.hpp
Sources/Sample/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Main.cpp
(+3557 files in other folders)
