######################### Settings #########################
cmake_minimum_required(VERSION 3.16.0)

set(CMAKE_CXX_STANDARD          17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(NAME "Chicane")

project(
    ${NAME}

    LANGUAGES
        CXX
    VERSION
        0.1.0
)

######################### Options #########################
option(CHICANE_SHARED   "Build shared library"    ON)
option(CHICANE_OPENGL   "Enable OpenGL"           ON)
option(CHICANE_VULKAN   "Enable Vulkan"           ON)
option(CHICANE_PROGRAMS "Compile engine programs" ON)
option(CHICANE_EDITOR   "Compile engine editor"   ON)
option(CHICANE_SAMPLE   "Compile engine sample"   ON)

######################### Values #########################
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
endif()

if (NOT CHICANE_BUILD_DIR)
    set(CHICANE_BUILD_DIR "${CMAKE_CURRENT_LIST_DIR}/Binaries/${CMAKE_SYSTEM_NAME}/${CMAKE_BUILD_TYPE}" CACHE STRING "Build directory" FORCE)
else()
    set(CHICANE_BUILD_DIR "${CMAKE_CURRENT_LIST_DIR}/${CHICANE_BUILD_DIR}")
endif()

if (CHICANE_SHARED)
    add_definitions(-DBUILD_SHARED)
endif()

if (CHICANE_OPENGL)
    if (NOT CHICANE_OPENGL_MAJOR_VERSION)
        set(CHICANE_OPENGL_MAJOR_VERSION 4 CACHE STRING "OpenGL major version" FORCE)
    endif()

    if (NOT CHICANE_OPENGL_MINOR_VERSION)
        set(CHICANE_OPENGL_MINOR_VERSION 6 CACHE STRING "OpenGL minor version" FORCE)
    endif()

    add_definitions(
        -DBUILD_OPENGL

        -DOPENGL_MAJOR_VERSION=${CHICANE_OPENGL_MAJOR_VERSION}
        -DOPENGL_MINOR_VERSION=${CHICANE_OPENGL_MINOR_VERSION}
    )
endif()

if (CHICANE_VULKAN)
    if (NOT CHICANE_VULKAN_MAJOR_VERSION)
        set(CHICANE_VULKAN_MAJOR_VERSION 1 CACHE STRING "Vulkan major version" FORCE)
    endif()

    if (NOT CHICANE_VULKAN_MINOR_VERSION)
        set(CHICANE_VULKAN_MINOR_VERSION 3 CACHE STRING "Vulkan minor version" FORCE)
    endif()

    if (NOT CHICANE_VULKAN_PATCH_VERSION)
        set(CHICANE_VULKAN_PATCH_VERSION 296 CACHE STRING "Vulkan patch version" FORCE)
    endif()

    add_definitions(
        -DBUILD_VULKAN

        -DVULKAN_MAJOR_VERSION=${CHICANE_VULKAN_MAJOR_VERSION}
        -DVULKAN_MINOR_VERSION=${CHICANE_VULKAN_MINOR_VERSION}
        -DVULKAN_PATCH_VERSION=${CHICANE_VULKAN_PATCH_VERSION}
    )
endif()

## System
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   "${CHICANE_BUILD_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CHICANE_BUILD_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   "${CHICANE_BUILD_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CHICANE_BUILD_DIR}")

set(CMAKE_SHARED_LIBRARY_PREFIX "")

set(CMAKE_BUILD_RPATH   "${ORIGIN}")
set(CMAKE_INSTALL_RPATH "${ORIGIN}")

## Base
set(CHICANE_INCLUDES_DIR "${CMAKE_CURRENT_LIST_DIR}/Includes")
set(CHICANE_SOURCES_DIR  "${CMAKE_CURRENT_LIST_DIR}/Sources")

set(CHICANE_ASSETS_DIR       "${CMAKE_CURRENT_LIST_DIR}/Assets")
set(CHICANE_ASSETS_BUILD_DIR "${CHICANE_BUILD_DIR}/Assets")

set(CHICANE_BUILD_INTERFACE_DIR   "${CHICANE_INCLUDES_DIR}")
set(CHICANE_INSTALL_INTERFACE_DIR "${CMAKE_INSTALL_INCLUDEDIR}")

## Engine
set(CHICANE_ENGINE_TARGET_NAME  "${NAME}-Engine")
set(CHICANE_ENGINE_INCLUDES_DIR "${CHICANE_INCLUDES_DIR}/Chicane")
set(CHICANE_ENGINE_SOURCES_DIR  "${CHICANE_SOURCES_DIR}/Engine")

set(CHICANE_ENGINE_ASSETS_TARGET_NAME "${CHICANE_ENGINE_TARGET_NAME}-Assets")
set(CHICANE_ENGINE_ASSETS_SOURCES_DIR "${CHICANE_ASSETS_DIR}/Engine")
set(CHICANE_ENGINE_ASSETS_BUILD_DIR   "${CHICANE_ASSETS_BUILD_DIR}/Engine")

## Programs
if (CHICANE_PROGRAMS)
    set(CHICANE_PROGRAMS_TARGET_NAME  "${NAME}-Programs")
    set(CHICANE_PROGRAMS_INCLUDES_DIR "${CHICANE_SOURCES_DIR}/Programs")
    set(CHICANE_PROGRAMS_SOURCES_DIR  "${CHICANE_SOURCES_DIR}/Programs")
endif()

## Editor
if (CHICANE_EDITOR)
    set(CHICANE_EDITOR_TARGET_NAME  "${NAME}-Editor")
    set(CHICANE_EDITOR_INCLUDES_DIR "${CHICANE_SOURCES_DIR}/Editor")
    set(CHICANE_EDITOR_SOURCES_DIR  "${CHICANE_SOURCES_DIR}/Editor")

    set(CHICANE_EDITOR_ASSETS_TARGET_NAME "${CHICANE_EDITOR_TARGET_NAME}-Assets")
    set(CHICANE_EDITOR_ASSETS_SOURCES_DIR "${CHICANE_ASSETS_DIR}/Editor")
    set(CHICANE_EDITOR_ASSETS_BUILD_DIR   "${CHICANE_ASSETS_BUILD_DIR}/Editor")
endif()

## Sample
if(CHICANE_SAMPLE)
    set(CHICANE_SAMPLE_TARGET_NAME  "${NAME}-Sample")
    set(CHICANE_SAMPLE_INCLUDES_DIR "${CHICANE_SOURCES_DIR}/Sample")
    set(CHICANE_SAMPLE_SOURCES_DIR  "${CHICANE_SOURCES_DIR}/Sample")

    set(CHICANE_SAMPLE_ASSETS_TARGET_NAME "${CHICANE_SAMPLE_TARGET_NAME}-Assets")
    set(CHICANE_SAMPLE_ASSETS_SOURCES_DIR "${CHICANE_ASSETS_DIR}/Sample")
    set(CHICANE_SAMPLE_ASSETS_BUILD_DIR   "${CHICANE_ASSETS_BUILD_DIR}/Sample")
endif()

######################### Includes #########################
include(CMakePackageConfigHelpers)

include(.env.cmake OPTIONAL RESULT_VARIABLE LOCAL_ENV)

include(CMake/Functions.cmake)

######################### Directories #########################
add_subdirectory(Assets)
add_subdirectory(Sources)

######################### Reflection #########################
CH_GENERATE_REFLECTION()