######################### Values #########################
## Box
set(CHICANE_ENGINE_BOX_TARGET_NAME  "${CHICANE_ENGINE_TARGET_NAME}-Box")
set(CHICANE_ENGINE_BOX_INCLUDES_DIR "${CHICANE_ENGINE_INCLUDES_DIR}/Box")
set(CHICANE_ENGINE_BOX_SOURCES_DIR  "${CHICANE_ENGINE_SOURCES_DIR}/Box")

## Core
set(CHICANE_ENGINE_CORE_TARGET_NAME  "${CHICANE_ENGINE_TARGET_NAME}-Core")
set(CHICANE_ENGINE_CORE_INCLUDES_DIR "${CHICANE_ENGINE_INCLUDES_DIR}/Core")
set(CHICANE_ENGINE_CORE_SOURCES_DIR  "${CHICANE_ENGINE_SOURCES_DIR}/Core")

## Grid
set(CHICANE_ENGINE_GRID_TARGET_NAME  "${CHICANE_ENGINE_TARGET_NAME}-Grid")
set(CHICANE_ENGINE_GRID_INCLUDES_DIR "${CHICANE_ENGINE_INCLUDES_DIR}/Grid")
set(CHICANE_ENGINE_GRID_SOURCES_DIR  "${CHICANE_ENGINE_SOURCES_DIR}/Grid")

## Kerb
set(CHICANE_ENGINE_KERB_TARGET_NAME  "${CHICANE_ENGINE_TARGET_NAME}-Kerb")
set(CHICANE_ENGINE_KERB_INCLUDES_DIR "${CHICANE_ENGINE_INCLUDES_DIR}/Kerb")
set(CHICANE_ENGINE_KERB_SOURCES_DIR  "${CHICANE_ENGINE_SOURCES_DIR}/Kerb")

## Renderer
set(CHICANE_ENGINE_RENDERER_TARGET_NAME  "${CHICANE_ENGINE_TARGET_NAME}-Renderer")
set(CHICANE_ENGINE_RENDERER_INCLUDES_DIR "${CHICANE_ENGINE_INCLUDES_DIR}/Renderer")
set(CHICANE_ENGINE_RENDERER_SOURCES_DIR  "${CHICANE_ENGINE_SOURCES_DIR}/Renderer")

## Runtime
set(CHICANE_ENGINE_RUNTIME_TARGET_NAME  "${CHICANE_ENGINE_TARGET_NAME}-Runtime")
set(CHICANE_ENGINE_RUNTIME_INCLUDES_DIR "${CHICANE_ENGINE_INCLUDES_DIR}/Runtime")
set(CHICANE_ENGINE_RUNTIME_SOURCES_DIR  "${CHICANE_ENGINE_SOURCES_DIR}/Runtime")

## Screech
set(CHICANE_ENGINE_SCREECH_TARGET_NAME  "${CHICANE_ENGINE_TARGET_NAME}-Screech")
set(CHICANE_ENGINE_SCREECH_INCLUDES_DIR "${CHICANE_ENGINE_INCLUDES_DIR}/Screech")
set(CHICANE_ENGINE_SCREECH_SOURCES_DIR  "${CHICANE_ENGINE_SOURCES_DIR}/Screech")

######################### Directories #########################
add_subdirectory(Box)
add_subdirectory(Core)
add_subdirectory(Grid)
add_subdirectory(Kerb)
add_subdirectory(Renderer)
add_subdirectory(Runtime)
add_subdirectory(Screech)