######################### Values #########################
## Box Utils
set(CHICANE_PROGRAMS_BOX_UTILS_TARGET_NAME  "${CHICANE_PROGRAMS_TARGET_NAME}-BoxUtils" CACHE INTERNAL "")
set(CHICANE_PROGRAMS_BOX_UTILS_INCLUDES_DIR "${CHICANE_PROGRAMS_SOURCES_DIR}/BoxUtils" CACHE INTERNAL "")
set(CHICANE_PROGRAMS_BOX_UTILS_SOURCES_DIR  "${CHICANE_PROGRAMS_SOURCES_DIR}/BoxUtils" CACHE INTERNAL "")

## Reflector
set(CHICANE_PROGRAMS_REFLECTOR_TARGET_NAME "${CHICANE_PROGRAMS_TARGET_NAME}-Reflector" CACHE INTERNAL "")
set(CHICANE_PROGRAMS_REFLECTOR_SOURCES_DIR "${CHICANE_PROGRAMS_SOURCES_DIR}/Reflector" CACHE INTERNAL "")
set(CHICANE_PROGRAMS_REFLECTOR_BINARY_DIR  "${CHICANE_BUILD_DIR}"                      CACHE INTERNAL "")
set(CHICANE_PROGRAMS_REFLECTOR_BINARY      "${CHICANE_BUILD_DIR}/${NAME}Reflector" CACHE INTERNAL "")

######################### Directories #########################
add_subdirectory(BoxUtils)
add_subdirectory(Reflector)